<resources>
    <string name="app_name">Jal Jeevan Haryali</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">जल-जीवन-हरियाली  </string>
    <string name="appSubTitle">जल जीवन हरियाली  </string>
    <string name="villageTitle">ग्राम</string>
    <string name="wardTitle">वार्ड</string>
    <string name="fieldRequired">यह जानकारी अनिवार्य है</string>
    <string name="benefi_List">लाभार्थी सूची</string>
    <string name="edit_beneficiaryList">लाभार्थी सूची में सुधार</string>
    <string name="stateText">बिहार</string>
    <string name="stateTitle">राज्य</string>
    <string name="financial_year">वर्ष:</string>
    <string name="district">जिला</string>
    <string name="block">ब्लॉक</string>
    <string name="sector">पंचायत</string>
    <string name="panchayat">आँगनबाड़ी  केन्द्र :</string>
    <string name="village">Village</string>
    <string name="f11">F11</string>
    <string name="f12">F12</string>
    <string name="spinner1">Spinner1</string>
    <string name="spinner2">Spinner2</string>
    <string name="spinner3">Spinner3</string>
    <string name="spinner4">Spinner4</string>
    <string name="spinner5">Spinner5</string>
    <string name="text1">केंद्र पर पंजीकृत बच्चों की संख्या</string>
    <string name="enter_text">शब्द डालें</string>
    <string name="text2"></string>
    <string name="delete_Text">Delete</string>
    <string name="do_you_want_to_delete"> क्या आप इस डेटा को हटाना चाहते हैं?</string>
    <string name="text3">Text3</string>
    <string name="text4">Text4</string>
    <string name="text5">Text5</string>
    <string name="remarks">अभियुक्ति</string>
    <string name="next">सुरक्षित करें और आगे बढ़ें</string>
    <string name="imagedesc">दृष्टि  </string>
    <string name="username">यूज़र का नंबर</string>
    <string name="enter_username">यूज़र का नंबर डालें</string>
    <string name="password">पासवर्ड </string>
    <string name="enter_password">पासवर्ड  डालें </string>
    <string name="login">लॉग इन करें</string>
    <string name="app_version">ऐप का वर्जन</string>
    <string name="user_name">यूज़र का नाम</string>
    <string name="welcome">Welcome</string>
    <string name="upload_files_to_the_server">अपलोड करें </string>
    <string name="credentialText">पंचायत चुनें</string>
    <string name="log_out">लॉग आउट करें</string>
    <string name="vouter_entry">वाउटर दर्ज करें</string>
    <string name="image">image</string>
    <string name="view_on_map">गूगले मैप पर देखें</string>
    <string name="file_in_draft_">निरीक्षण डेटा में परिवर्तन करें</string>
    <string name="new_enrollment_well">कुंआ का निरीक्षण करें</string>
    <string name="new_enrollment_lake">संरचना का निरीक्षण करें</string>
    <string name="title_activity_credential">पंचायत का चयन करें </string>
    <string name="title_activity_draft">निरीक्षण प्रतिवेदन में सुधार  </string>
    <string name="title_activity_report">प्रेषित प्रतिवेदन</string>
    <string name="title_activity_report_list">प्रेषित प्रतिवेदन सूची</string>
    <string name="title_activity_report_detail">प्रेषित प्रतिवेदन विवरण</string>
    <string name="title_activity_report_home">होम</string>
    <string name="title_activity_report_login">लॉग इन</string>
    <string name="title_activity_report_newinspection">निरीक्षण प्रतिवेदन दर्ज करें</string>
    <string name="view_report">निरीक्षण डेटा देखें</string>
    <string name="view_gps_report">प्रेषित जीपीएस लोकेशन देखें</string>
    <string name="take_gps_loc"> जीपीएस  लोकेसन ले  </string>
    <string name="make_gps_loc_edit"> जीपीएस लोकेशन में सुधार   </string>
    <string name="upload_gps_loc"> जीपीएस  लोकेसन अपलोड करें </string>
    <string name="upload_voucher_loc"> वाउटर अपलोड करें </string>
    <string name="kendraKaNam">"केन्द्र का नाम : "</string>
    <string name="select_spinner_hint"> चयन करें</string>
    <string name="Invalid_Number"> अमान्य संख्या</string>
    <string name="password_not_match"> सही पासवर्ड दर्ज करें</string>

    <string name="loading_fail"> लोडिंग फेल1 !</string>
    <string name="loading_fail1"> लोडिंग फेल2 !</string>
    <string name="loading_fail3"> लोडिंग फेल3 !</string>
    <string name="loading_fail4"> लोडिंग फेल4 !</string>
    <string name="fill_all_data"> कृप्या सारी जानकारी डालें</string>
    <string name="update_text">अपडेट हो गया</string>
    <string name="Notdelete_text">इसे मिटा नहीं सकते </string>
    <string name="delete_text">क्या आप इसे मिटाना चाहते हैं ?</string>
    <string name="delete_titleText">मिटायें </string>
    <string name="yes"> हाँ  </string>
    <string name="no"> नहीं  </string>
    <string name="commercial"> सार्वजनिक</string>
    <string name="privat"> निजी</string>
    <string name="choose">select  </string>
    <string name="no_internet_connection">इंटरनेट कनेक्शन नहीं है   </string>
    <string name="no_file_to_upload">प्रेषण के लिए कोई प्रतिवेदन नहीं है   </string>
    <string name="upload_text">प्रेषण !  </string>
    <string name="do_you_want_to_upload"> क्या आप सभी प्रतिवेदन प्रेषित करना चाहते हैं ?</string>
    <string name="uploading">प्रेषण हो रहा है...</string>
    <string name="uploaded_successfully">प्रेषण हो गया</string>
    <string name="uploading_failed">प्रेषण फेल !</string>
    <string name="Error_in_Network">अपने इंटरनेट कनेक्शन की जाँच करें और पुन: प्रयास करें</string>
    <string name="Error_in_Server">सर्वर बहुत व्यस्त हैं कुछ समय बाद कोशिश करें</string>
    <string name="authenticating">सत्यापन हो रहा है ...</string>
    <string name="failed">फेल !</string>
    <string name="authentication_failed">सत्यापन फेल हो गया !</string>
    <string name="server_down_title">इंटरनेट/सर्वर डाउन  !</string>
    <string name="server_down_text">अभी इंटरनेट कनेक्शन नहीं है/सर्वर रखरखाव मे है  !</string>
    <string name="wrong_device_title">गलत उपकरण !</string>
    <string name="wrong_device_text">यह उपकरण आपके खाता में पंजीकृत नहीं है !</string>
    <string name="username_password_notmatched">यूजर का नाम या पासवर्ड सही नहीं है !</string>
    <string name="enable_internet_for_firsttime">कृप्या पहली बार के लिए इंटरनेट कनेक्शन ऑन करें !</string>
    <string name="select_project">कृप्या आंगनवाड़ी केन्द्र चयन करें </string>
    <string name="update">अपडेट करें</string>
    <string name="ignore">छोड़ दें   </string>
    <string name="ok">ओके</string>
    <string name="turnon_internet">कृप्या  इंटरनेट कनेक्शन ऑन करें  </string>
    <string name="continue_offline">ऑफलाइन काम करें    </string>
    <string name="downloaded">डाउनलोड हो गया    </string>
    <string name="multiphoto_activity_title">मकान की फोटों    </string>
    <string name="photo1_Button1">फोटो संख्या-1  </string>
    <string name="photo1_Button2">फोटो संख्या-2  </string>
    <string name="save">सुरक्षित करें</string>
    <string name="id">आईडी सँख्या  </string>


    <string name="date">दिनांक: </string>
    <string name="anumodan_date">ग्राम सभा में अनुमोदन की तिथि: </string>
    <string name="prashishinik_date">secure पर प्रशासनिक स्वीकृति की तिथि: </string>
    <string name="edit">सुधार  करें</string>
    <string name="report">प्रतिवेदन  </string>
    <string name="no_pending_file">कोई निरीक्षण प्रतिवेदन नहीं है  </string>

    <string name="project_name">  प्रोजेक्ट का नाम:  </string>

    <string name="oc">  खुला/बंद   </string>
    <string name="ms">  मॉर्निंग स्नैक्स  </string>
    <string name="present"> उपस्थित   </string>
    <string name="level"> सेवा का स्तर   </string>
    <string name="downloading">डाउनलोडिंग ...  </string>
    <string name="no_record_found">कोई रिकॉर्ड नहीं मिला है</string>

    <string name="open"> खुला</string>
    <string name="confirmation">पुष्टि करें</string>
    <string name="close"> बंद </string>
    <string name="view_admin_report"> प्रतिवेदन देखें </string>
    <string name="month"> माह: </string>
    <string name="select_date">दिनांक चयन करें </string>
    <string name="today_date"> आज की तिथि:</string>
    <string name="no_reportdata"> कोई प्रतिवेदन नहीं है </string>
    <string name="select_project_msg">प्रोजेक्ट का नाम चयन करें</string>
    <string name="serialno">क्रमांक   </string>
    <string name="no_of_report"> कुल:</string>
    <string name="select_year">वर्ष चुनें </string>
    <string name="select_month">माह चुनें </string>

    <string name="total_inspection">कुल जाँच </string>
    <string name="sync">डेटा को सिंक्रनाइज़ करें</string>
    <string name="resend_otp_string"><u>रीसेंड एक्टिवेशन  की </u></string>
    <string name="title_activity_dash_board">आँगन</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">आँगन</string>
    <string name="navigation_drawer_close">आँगन</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_profile">प्रोफाइल</string>

    <string name="set_ward_for_ben">लाभार्थी के वार्ड को अपडेट करे</string>
    <string name="upload_ward_for_ben">लाभार्थी के वार्ड</string>
    <string name="title_activity_edit_stock_position">EditActivityStockPosition</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
