<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <include
        android:id="@+id/footer"
        layout="@layout/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ll11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff0055"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appSubTitle"
                android:textColor="#ff0055"
                android:textSize="17sp"
                android:textStyle="bold" />

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_red_dark" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/back_login"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/buttonshape"
                    android:padding="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="#222222"
                            android:textSize="17sp"
                            android:textStyle="bold"

                            />

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/textboxshape2"
                            android:hint="@string/enter_username"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="#222222"
                            android:textSize="17sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textColor="#222222"
                            android:textSize="17sp"
                            android:textStyle="bold"

                            />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/textboxshape2"
                            android:hint="@string/enter_password"
                            android:imeActionLabel="Login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="#222222"
                            android:textSize="17sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">


                        <Button
                            android:id="@+id/email_sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonbackshape"
                            android:onClick="Login"
                            android:padding="1dp"
                            android:text="@string/login"
                            android:textColor="#ffffff"
                            android:textSize="17sp" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/txtVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_version"
                        android:textColor="#990099"
                        android:textSize="15sp"
                        android:paddingBottom="10dp"
                        android:typeface="serif" />

                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center|top"
                android:src="@drawable/jal_hariyali"
                android:contentDescription="@string/imagedesc" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
